--- a/portafolio/style.css
+++ b/portafolio/style.css
@@ -1,4 +1,3 @@
-/* Reset y estilos básicos */
 body,
 html {
     margin: 0;
@@ -7,22 +6,82 @@ html {
     transition: background-color 0.3s, color 0.3s;
 }
 
-body.light-mode {
-    background-color: #ffffff;
-    color: #000000;
+.container {
+    display: flex;
+    width: 100%;
+    /* flex-direction: row; */
+    justify-content: space-between;
 }
 
-body.dark-mode {
-    background-color: #000000;
-    color: #ffffff;
+.container > *{
+    flex: 1;
 }
 
-/* Estilo del header horizontal */
+.containe nav {
+    justify-content: space-between;
+}
+
+.container nav ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    justify-content: center;
+    gap: 50px;
+}
+
+.container nav ul li a{
+    all: unset;
+}
+
+.titulos {
+    text-align: center;
+    animation: pop-in 0.5s ease-in-out;
+}
+
+@keyframes pop-in {
+    0% {
+        transform: scale(0.5);
+        opacity: 0;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.titulo {
+    position: relative;
+    float: left;
+    background: tomato;
+    color: #fff;
+    font-size: 2.5em;
+}
+
+.titulo2 {
+    position: absolute;
+    right: 0;
+    width: 0;
+    border-left: 1px solid #000;
+    animation: escribir 5s steps(8) infinite alternate;
+}
+
+@keyframes escribir {
+    from {
+        width: 100%
+    }
+
+    to {
+        width: 0
+    }
+}
+
+
 header {
-    background: linear-gradient(90deg, #007BFF, #28A745);
+    background-color: #48e;
     padding: 1rem;
     display: flex;
-    flex-direction: ro  w;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
@@ -31,6 +90,12 @@ header h1 {
     margin: 0;
     font-size: 2rem;
     color: #ffffff;
-    flex: 1;
-    /* El título ocupa espacio proporcional */
+}
+
+main{
+    background-color: #1f2937;
+    z-index: -1;
+    position: relative;
+    top: -20vw;
+    padding-top: 15vw;
 }
