--- a/portafolio/style.css
+++ b/portafolio/style.css
@@ -1,199 +1,192 @@
 body,
 html {
-    margin: 0;
-    padding: 0;
-    font-family: 'Arial', sans-serif;
-    scroll-behavior: smooth;
-    transition: background-color 0.3s, color 0.3s;
+   margin: 0;
+   padding: 0;
+   font-family: 'Arial', sans-serif;
+   scroll-behavior: smooth;
+   /* transition: background-color 0.3s, color 0.3s; */
+}
+
+#wrapper {
+   position: relative;
+   z-index: 1;
 }
 
 header {
-    background-color: #48e;
-    padding: 1rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+   background-color: #48e;
+   padding: 1rem;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   align-items: center;
 }
 
-
 h1 {
-    font-family: cursive, sans-serif;
-    margin: 0;
-    font-size: 3rem;
-    color: #ffffff;
-    overflow: hidden;
-    border-right: .15em solid orange;
-    white-space: nowrap;
-    margin: 0 auto;
-    letter-spacing: .15em;
-    animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
+   font-family: cursive, sans-serif;
+   margin: 0;
+   font-size: 3rem;
+   color: #ffffff;
+   overflow: hidden;
+   border-right: 0.15em solid orange;
+   white-space: nowrap;
+   margin: 0 auto;
+   letter-spacing: 0.15em;
+   animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
 }
 
 @keyframes typing {
-    from {
-        width: 0
-    }
+   from {
+      width: 0;
+   }
 
-    to {
-        width: 100%
-    }
+   to {
+      width: 100%;
+   }
 }
 
 @keyframes blink-caret {
+   from,
+   to {
+      border-color: transparent;
+   }
 
-    from,
-    to {
-        border-color: transparent
-    }
+   50% {
+      border-color: #4488ee;
+   }
 
-    50% {
-        border-color: #4488ee;
-    }
-
-    100% {
-        color: #ffffff;
-    }
+   100% {
+      color: #ffffff;
+   }
 }
 
 main {
-    background-color: #1f2937;
-    z-index: -1;
-    position: relative;
-    top: -20vw;
-    padding-top: 15vw;
+   background-color: #1f2937;
+   z-index: -1;
+   position: relative;
+   top: -20vw;
+   padding-top: 15vw;
 }
 
 .container {
-    display: flex;
-    width: 100%;
-    /* flex-direction: row; */
-    justify-content: space-between;
+   display: flex;
+   width: 100%;
+   /* flex-direction: row; */
+   justify-content: space-between;
 }
 
-.container>* {
-    flex: 1;
+.container > * {
+   flex: 1;
 }
 
 .container nav {
-    justify-content: space-between;
+   justify-content: space-between;
 }
 
 .container nav ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    justify-content: center;
-    gap: 50px;
+   display: flex;
+   list-style: none;
+   padding: 0;
+   justify-content: center;
+   gap: 50px;
 }
 
 .container nav ul li a {
-    text-decoration: none;
-    color: inherit;
-    cursor: pointer;
+   text-decoration: none;
+   color: inherit;
+   cursor: pointer;
+   color: white;
+   font-weight: 700;
+   padding: 5px;
+   background: linear-gradient(45deg, #fff, #fff) bottom / 0% 2px no-repeat;
+   transition: background-size 0.2s;
 }
 
 .container nav ul li a:hover {
-    animation: esperar 0.7s alternate backwards;
-    animation-fill-mode: forwards;
-}
-
-@keyframes esperar {
-    0% {
-        color: #000;
-    }
-
-    50% {
-        color: #0d525d;
-    }
-
-    100% {
-        color: #22D3EE;
-    }
+   background-size: 100% 2px;
 }
 
 .contenedor {
-    display: flex;
-    margin-top: -10px;
-    flex-direction: row;
-    justify-content: space-between;
-    text-align: center;
-    align-items: center;
-    padding: 20px;
-    gap: 20px;
+   display: flex;
+   margin-top: -10px;
+   flex-direction: row;
+   justify-content: space-between;
+   text-align: center;
+   align-items: center;
+   padding: 20px;
+   gap: 20px;
 }
 
 .sobre-mi .contenedor img {
-    clip-path: ellipse(36% 48% at 38% 50%);
-    width: 280px;
-    height: 350px;
+   clip-path: ellipse(36% 48% at 38% 50%);
+   width: 280px;
+   height: 350px;
 }
 
 .contenedor .info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #CBD5E1;
-    width: 270px;
-    max-height: auto;
-    margin-left: 0;
-    margin-right: 150px;
-    white-space: wrap;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   color: #cbd5e1;
+   width: 270px;
+   max-height: auto;
+   margin-left: 0;
+   margin-right: 150px;
+   white-space: wrap;
 }
 
 .contenedor .separacion {
-    width: 5px;
-    /* Add a width to make it visible */
-    height: 500px;
-    margin: 0 340px 0 0;
-    background-color: #000;
+   width: 5px;
+   /* Add a width to make it visible */
+   height: 500px;
+   margin: 0 340px 0 0;
+   background-color: #000;
 }
 
 .perfil {
-    max-height: auto;
-    flex-direction: column;
-    flex: 1;
-    padding: 0;
+   max-height: auto;
+   flex-direction: column;
+   flex: 1;
+   padding: 0;
 }
 
 .contenedor .perfil h2 {
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 3.5rem;
-    color: #22D3EE;
+   text-align: center;
+   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   font-size: 3.5rem;
+   color: #22d3ee;
 }
 
 .habilidades {
-    display: flex;
-    flex-direction: column;
-    margin-top: 152px;
+   display: flex;
+   flex-direction: column;
+   margin-top: 152px;
 }
 
 .habilidades h2 {
-    color: #22D3EE;
-    font-size: 2.5rem;
-    text-align: center;
+   color: #22d3ee;
+   font-size: 2.5rem;
+   text-align: center;
 }
 
 .habilidades .skills-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 20px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   align-items: center;
+   margin-top: 20px;
 }
 
-.habilidades .skills-container .skill{
-    padding: 10px;
-    width: 200px;
-    height: 50px;
-    margin-top: 20px;
-    background-color: #ead36c;
-    border: none;
-    border-radius: 10px;
-    color: #2b6b80;
+.habilidades .skills-container .skill {
+   padding: 10px;
+   width: 200px;
+   height: 50px;
+   margin-top: 20px;
+   background-color: #ead36c;
+   border: none;
+   border-radius: 10px;
+   color: #2b6b80;
 }
 
 .habilidades .skills-container .skill:hover {
-    background-color: #ffffff;
+   background-color: #ffffff;
 }
